--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "@paulrberg/solidity-template",
-  "description": "Setup for writing Solidity smart contracts",
+  "name": "@XIO-Network/xio-flashapp-contract",
+  "description": "xio flash app smart contract repo",
   "version": "1.0.0",
-  "author": {
-    "name": "Paul Razvan Berg",
-    "url": "https://paulrberg.com"
-  },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.2",
     "@ethersproject/abstract-signer": "^5.0.6",
     "@ethersproject/bignumber": "^5.0.8",
-    "@nomiclabs/buidler": "^1.4.7",
-    "@nomiclabs/buidler-ethers": "^2.0.2",
-    "@nomiclabs/buidler-waffle": "^2.1.0",
-    "@typechain/ethers-v5": "^1.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@typechain/ethers-v5": "^2.0.0",
     "@types/chai": "^4.2.13",
     "@types/fs-extra": "^9.0.1",
     "@types/mocha": "^7.0.2",
@@ -30,18 +25,20 @@
     "ethereum-waffle": "^3.2.0",
     "ethers": "^5.0.17",
     "fs-extra": "^9.0.1",
+    "hardhat": "^2.0.2",
+    "hardhat-typechain": "^0.3.3",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
     "prettier": "^2.1.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.59",
     "shelljs": "^0.8.4",
-    "solc": "0.6.12",
+    "solc": "0.7.4",
     "solhint": "^3.2.1",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.11",
-    "ts-generator": "^0.0.8",
+    "solidity-coverage": "^0.7.12",
+    "ts-generator": "^0.1.1",
     "ts-node": "^8.10.2",
-    "typechain": "^2.0.1",
+    "typechain": "^3.0.0",
     "typescript": "^3.9.7"
   },
   "files": [
@@ -50,25 +47,32 @@
   "keywords": [
     "blockchain",
     "ethereum",
+    "hardhat",
     "smart-contracts",
     "solidity"
   ],
-  "license": "WTFPL",
+  "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "sh ./pre-commit.sh",
+      "pre-push": "yarn test"
+    }
+  },
   "scripts": {
-    "clean": "buidler clean",
+    "clean": "hardhat clean",
     "commit": "git-cz",
-    "compile": "buidler compile",
-    "coverage": "buidler coverage --solcoverjs ./.solcover.js --network coverage --temp artifacts --testfiles \"./test/**/*.ts\"",
-    "lint": "yarn lint lint:sol && yarn run lint:ts && yarn run prettier:list-different",
+    "compile": "hardhat compile",
+    "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/**/*.ts\"",
+    "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
     "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:list-different": "prettier --config .prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
-    "test": "buidler test",
-    "typechain": "buidler typechain",
-    "deploy": "buidler run ./scripts/deploy.ts"
+    "test": "hardhat test",
+    "typechain": "hardhat typechain"
   }
 }
