--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,13 +14,13 @@
   },
   "exclude": ["node_modules"],
   "include": [
-    "@types/**/*",
     "artifacts/**/*",
     "artifacts/**/*.json",
     "scripts/**/*",
     "tasks/**/*",
     "test/**/*",
     "typechain/**/*",
-    "buidler.config.ts"
+    "types/**/*",
+    "hardhat.config.ts"
   ]
 }
