fix: added permit functionality in main contract

--- a/package.json
+++ b/package.json
@@ -75,5 +75,8 @@
     "test": "hardhat test",
     "typechain": "hardhat typechain",
     "deploy": "hardhat run ./scripts/deploy.ts"
+  },
+  "dependencies": {
+    "@zemse/solidity-flattener": "^1.5.1"
   }
 }
